# OGScope

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  Makefile  README.md  README_EN.md  T5_modern_ui_demo.html  TEST_LOCAL.md  default_config.json  init_git.sh  pyproject.toml  refactor_report.json
.cursor/rules/: archive-astrometry-platesolve-frozen.mdc
.github/scripts/: apply-branch-protection.sh
.github/workflows/: branch-guard.yml  ci.yml  release.yml
archive/: README.md
archive/astrometry-platesolve-frozen/: INTEGRATION_TODO.md  README.md  SOURCE_COMMIT.txt  deploy_platesolve.sh
data/catalog/: README.md  stars.db
data/plate_solve/: README.md
deploy/: network.env.example  ogscope.env.example
docker/: .dockerignore  UI_BUILDER_README.md  compose.yml
docs/: API_ARCHITECTURE.md  API_ARCHITECTURE_EN.md  DEBUG_CONSOLE.md  DEBUG_CONSOLE_EN.md  QUICK_START.md  QUICK_START_EN.md  README.md  README_EN.md  SUPERSAMPLE_VERIFICATION.md
docs/architecture/: OGSCOPE_SYSTEM_ARCHITECTURE_BILINGUAL.md
docs/contracts/: core-compatibility-matrix.md  core-rest-v1.md  core-rest-v1_EN.md  dev-rest-v1.md  dev-rest-v1_EN.md  hardware-plane-uds-v1.md  hardware-plane-uds-v1_EN.md  subordinate-mode.md  subordinate-mode_EN.md
docs/development/: ARCHITECTURE_QUICK_CHECKLIST.md  ARCHITECTURE_QUICK_CHECKLIST_EN.md  DEPLOY.md  DEPLOY_EN.md  README.md  README_EN.md  SCRIPT_STANDARDS.md  ogscope-service-hardening.md  plate-solve-data.md  pycharm-remote.md  testing-guide.md  testing-guide_EN.md  wifi-nm.md  wifi-nm_EN.md
docs/hardware/: bom.md  bom_EN.md
ogscope/: __init__.py  __version__.py  config.py  config_catalog.py  main.py
ogscope/domain/: __init__.py
ogscope/hardware/: camera.py  gpio_config.py  wifi_emergency_gpio.py  wifi_switch.py
ogscope/hardware_plane/: client.py  contracts.py  daemon.py
ogscope/modules/: __init__.py
ogscope/platform/: __init__.py
ogscope/utils/: environment.py  logging_config.py  virtual_stream.py
ogscope/web/: app.py  camera_shared.py  mjpeg_stream_helpers.py  mjpeg_stream_limiter.py
scripts/: board-update.sh  boot-config-camera.sh  boot-config-i2c.sh  bootstrap.sh  diagnose_camera.py  ensure-ogscope-systemd-network-env.sh  install-min.sh  install.sh  mirror.sh  ogscope-config-write.sh  ogscope-network-boot.sh  ogscope-network-init.sh  ogscope-wifi-switch.sh  quick_camera_check.sh  spi_display_smoke_test.py  start_debug_console.sh  start_new_ui_demo.py  sync_board_code.sh  sync_dev_board.sh  test_api_refactor.py  test_camera_api.py  test_debug_console.py  test_debug_console_fix.py  test_debug_console_refactor.py  test_enhanced_debug.py  test_first_frame_speed.py  test_frontend_histogram.py  test_frontend_layout_fix.py  test_histogram.py  test_image_quality_api.py  test_image_quality_fix.py  test_image_quality_monitoring_fix.py  test_new_ui_design.py  test_noise_level_fix.py  test_preview_performance.py  test_supersample.py  test_supersample_quality.py  ui_builder_shell.sh  uninstall.sh  verify_refactor.py
tests/: conftest.py
tests/integration/: test_analysis_pipeline.py
tests/unit/: test_analysis_api.py  test_api.py  test_camera_flip.py  test_camera_manager_health.py  test_catalog_api.py  test_centroid_quality.py  test_config_catalog.py  test_config_files.py  test_core_contract_api.py  test_debug_camera_api.py  test_debug_files_api.py  test_debug_presets_api.py  test_dev_contract_api.py  test_domain_camera_sidecar.py  test_domain_camera_streaming.py  test_domain_shared_filesystem.py  test_hardware_plane.py  test_mjpeg_stream_helpers.py  test_mjpeg_stream_limiter.py  test_plate_large_scale_bg.py  test_realtime_api.py  (+5 more)
web/: manifest.json  offline.html
(+446 files in other folders)
